2007-01-09  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.0~.

2007-01-02  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.25.

2007-01-01  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl (@librarypaths): Add '/emul/ia32-linux/lib'
	and '/emul/ia32-linux/usr/lib'.

2006-11-24  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl: Add lzma extracting support.
	(checkdiff): Likewise.
	(forkgzipread): Likewise.
	* lib/dpkg.h (LZMA): New macro.
	(compression_type): Add compress_type_lzma.
	* lib/compression.c (decompress_cat): Handle compress_type_lzma
	decompression.
	* dpkg-deb/dpkg-deb.h (DATAMEMBER_LZMA): New macro.
	(DATAMEMBER_COMPAT_LZMA): Likewise.
	* dpkg-deb/extract.c (extracthalf): Handle DATAMEMBER_LZMA and
	DATAMEMBER_COMPAT_LZMA members.

2006-11-24  Brendan O'Dea  <bod@debian.org>

	* scripts/controllib.pl (subprocerr): Require POSIX for WIFEXITED,
	WEXITSTATUS, WIFSIGNALED and WTERMSIG.

2006-10-13  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.25~.

2006-10-13  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.24.

2006-10-13  Guillem Jover  <guillem@debian.org>

	* dselect/pkgdisplay.cc (relatestrings): Add a string for the Breaks
	field as it should match the enum debtype in 'lib/dpkg-db.h'.

2006-10-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.24~.

2006-10-12  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.23.

2006-10-06  Guillem Jover  <guillem@debian.org>

	* README.translators: Add references to the new scripts/po/ChangeLog
	file. State that the languages should be listed alphabetically in
	debian/changelog.

2006-09-27  Guillem Jover  <guillem@debian.org>

	* m4/compiler.m4: Add a new line at the end of the file, to cope with
	an autoreconf failure due to the new m4 1.4.7.

2006-09-27  Ian Jackson  <iwj@ubuntu.com>
