@@ -3,6 +3,8 @@ dpkg (1.14.0) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Make the copyright information in dpkg-deb.1 and dpkg-split.1 match the
     one in the source. Thanks to Nicolas François. Closes: #379320
+  * Allow dpkg-buildpackage to properly override '-b' when passed after '-B'.
+    Thanks to Julian Gilbey. Closes: #397479
 
  -- Guillem Jover <guillem@debian.org>  Tue,  9 Jan 2007 22:48:47 +0200
 
