@@ -1,3 +1,8 @@
+2007-01-10  Julian Gilbey  <jdg@polya.uklinux.net>
+
+	* scripts/dpkg-buildpackage.sh: Allow '-b' to properly override a
+	previously passed '-B'.
+
 2007-01-09  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.0~.
